--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>htmltest</title>
 </head>
+<style>
+  html,
+  body {
+    height: 100%;
+  }
+  body {
+    overscroll-behavior-y: none;
+  }
+</style>
 <body>
   htmltest
+  <input type="text">
 </body>
 </html>
