--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     top: 0;
   }
   .wrap {
-    min-height: 100vh;
+    position: relative;
+    min-height: 100%;
   }
   .main {
-    min-height: 100vh;
+    min-height: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
