--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     min-height: 100%;
   }
   .main {
+    position: relative;
     min-height: 100%;
     box-sizing: border-box;
     display: flex;
