--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="wrap">
     <div class="main">
       <div class="test">
-        <input type="text">
+        <input type="text">1
 
       </div>
       <div class="sticky">
