--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
   }
   body {
     overscroll-behavior-y: none;
-    position: fixed;
+    /* position: fixed; */
     height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
+    /* width: 100%; */
+    /* left: 0; */
+    /* top: 0; */
   }
   .wrap {
-    position: relative;
-    min-height: 100%;
+    min-height: 100vh;
   }
   .main {
-    position: relative;
-    min-height: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
