--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   }
   body {
     overscroll-behavior-y: none;
-    /* position: fixed; */
+    position: fixed;
     height: 100%;
-    /* width: 100%; */
-    /* left: 0; */
-    /* top: 0; */
+    width: 100%;
+    left: 0;
+    top: 0;
   }
   .wrap {
     min-height: 100vh;
