--- a/test.html
+++ b/test.html
@@ -10,18 +10,33 @@
   body {
     padding: 0;
     margin: 0;
+    height: 100%;
+  }
+  .inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .main {
+    flex: 1;
+    overflow: hidden auto;
   }
   .test {
-    position: sticky;
+    flex: none;
     left: 0;
     bottom: 0;
   }
 </style>
 <body>
-  <input type="text">
-  <div style="height: 110vh;"></div>
-  <div class="test">
-    test
+  <div class="wrap">
+    <div class="inner">
+      <div class="main">
+        <input type="text">
+      </div>
+      <div class="test">
+        test
+      </div>
+    </div>
   </div>
 </body>
 </html>
