--- a/test.html
+++ b/test.html
@@ -11,7 +11,9 @@
     padding: 0;
     margin: 0;
     height: 100%;
-    position: relative;
+  }
+  .wrap {
+    height: 100%;
   }
   .inner {
     display: flex;
