--- a/test.html
+++ b/test.html
@@ -10,9 +10,11 @@
   body {
     padding: 0;
     margin: 0;
+    position: relative;
     height: 100%;
   }
   .wrap {
+    position: relative;
     height: 100%;
   }
   .inner {
