--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
   .inner {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
   }
   .main {
     flex: auto;
