--- a/test.html
+++ b/test.html
@@ -46,8 +46,8 @@
 <script>
 
 window.addEventListener('resize', function() {
-  const a = window.scrollY;
-  document.querySelector('.dd').innerText += a;
+  // const a = window.scrollY;
+  // document.querySelector('.dd').innerText += a;
 });
 </script>
 </html>
