--- a/test.html
+++ b/test.html
@@ -17,17 +17,16 @@
   .inner {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
   }
   .main {
     flex: auto;
   }
   .test {
-    position: sticky;
+    position: fixed;
     height: 20px;
     background-color: red;
     left: 0;
-    top: calc(100vh - 20px);
+    bottom: 0;
   }
 </style>
 <body>
