--- a/test.html
+++ b/test.html
@@ -14,34 +14,35 @@
     width: 100%;
     position: relative;
   }
-  .inner {
-    display: flex;
-    flex-direction: column;
-  }
-  .main {
-    flex: auto;
-  }
-  .test {
-    position: fixed;
+  table {
+    table-layout: fixed;
+    border-collapse: collapse;
     width: 100%;
-    height: 20px;
-    background-color: red;
-    left: 0;
-    bottom: 0;
+    overflow: hidden;
   }
 </style>
 <body>
-  <div class="wrap">
-    <div class="inner">
-      <div class="main">
-        <input type="text">
-        <div class="dd"></div>
-      </div>
-      <div class="test">
-        test
-      </div>
-    </div>
-  </div>
+  <table>
+    <colgroup>
+      <col>
+      <col style="width: 80px;">
+      <col style="width: 80px;">
+    </colgroup>
+  </table>
+  <thead>
+    <tr>
+      <th>1</th>
+      <th>2</th>
+      <th>3</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+    </tr>
+  </tbody>
 </body>
 <script>
 
