--- a/test.html
+++ b/test.html
@@ -20,6 +20,13 @@
     width: 100%;
     overflow: hidden;
   }
+  td {
+    border: 1px solid black;
+  }
+  th {
+    border: 1px solid black;
+    background-color: #eee;
+  }
 </style>
 <body>
   <table>
