--- a/test.html
+++ b/test.html
@@ -32,8 +32,8 @@
   <table>
     <colgroup>
       <col>
-      <col style="width: 80px;">
-      <col style="width: 80px;">
+      <col width="80">
+      <col width="80">
     </colgroup>
     <thead>
       <tr>
