--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 <body>
   <div class="wrap">
     <div class="main">
-      <div class="test">
-        <input type="text">
-      </div>
       <div class="sticky">
         <button id="test1" onclick="document.querySelector('#test3').focus()">1</button>
-        <button id="test2">2</button>
-        <button id="test3">3</button>
+        <br><br><button id="test2">2</button>
+        <br><br><button id="test3">3</button>
       </div>
     </div>
   </div>
