--- a/test2.html
+++ b/test2.html
@@ -7,8 +7,20 @@
 </head>
 <body>
 
-<button id="test" title="tt">
+<button id="test" aria-label="lb">
   test
+</button>
+<br>
+<br>
+<button id="test1" title="tt">
+  test
+</button>
+<br>
+<br>
+
+<button id="test2" title="tt">
+  test
+  <button>dd</button>
 </button>
 
 <script>
