--- a/test2.html
+++ b/test2.html
@@ -23,6 +23,22 @@
   <button>dd</button>
 </button>
 
+<button id="test2" title="tt">
+  test
+  <button>dd</button>
+</button>
+<br>
+<br>
+<a id="testa" title="선택됨">
+  test
+  <button>dd</button>
+</a>
+
+<button id="test2" title="tt">
+  test
+  <button>dd</button>
+</button>
+
 <script>
 </script>
 
