--- a/test2.html
+++ b/test2.html
@@ -6,38 +6,10 @@
   <title>이벤트 트리거 예제</title>
 </head>
 <body>
-
-<button id="test" aria-label="lb">
-  test
-</button>
-<br>
-<br>
-<button id="test1" title="tt">
-  test
-</button>
-<br>
-<br>
-
-<button id="test2" title="tt">
-  test
-  <button>dd</button>
-</button>
-
-<button id="test2" title="tt">
-  test
-  <button>dd</button>
-</button>
-<br>
-<br>
-<a id="testa" title="선택됨">
+<a id="testa" href="#none" title="선택됨">
   test
   <button>dd</button>
 </a>
-
-<button id="test2" title="tt">
-  test
-  <button>dd</button>
-</button>
 
 <script>
 </script>
