--- a/test2.html
+++ b/test2.html
@@ -10,6 +10,18 @@
   test
   <button>dd</button>
 </a>
+<br>
+<br>
+<button href="#none" title="선택됨">
+  test
+  <button>dd</button>
+</button>
+<br>
+<br>
+<button href="#none" title="선택됨">
+  test
+  <button>dd</button>
+</button>
 
 <script>
 </script>
