--- a/test2.html
+++ b/test2.html
@@ -6,7 +6,15 @@
   <title>이벤트 트리거 예제</title>
 </head>
 <body>
-<a id="testa" href="#none" title="선택됨">
+<a href="#none" title="선택됨">
+  <div>a1</div>
+  <div>b3</div>
+  <div>c12</div>
+  <button>dd</button>
+</a>
+<br>
+<br>
+<a href="#none" aria-label="선택됨">
   <div>a1</div>
   <div>b3</div>
   <div>c12</div>
