--- a/test2.html
+++ b/test2.html
@@ -6,34 +6,26 @@
   <title>이벤트 트리거 예제</title>
 </head>
 <body>
-<a href="#none" title="선택됨">
-  <div>a1</div>
-  <div>b3</div>
-  <div>c12</div>
-  <button>dd</button>
-</a>
-<br>
-<br>
-<a href="#none" aria-label="선택됨">
-  <div>a1</div>
-  <div>b3</div>
-  <div>c12</div>
-  <button>dd</button>
-</a>
-<br>
-<br>
-
-<button title="선택됨">
-  test
-  <button>dd</button>
-</button>
-
-<br>
-<br>
-<button title="선택됨">
-  test
-  <button>dd</button>
-</button>
+<ul>
+  <li>
+    <button title="선택됨">리스트 선택</button>
+    <div title="col1">가</div>
+    <div title="col2">나</div>
+    <div title="col3">다</div>
+    <div title="col4">
+      <button>연장</button>
+    </div>
+  </li>
+  <li>
+    <button>리스트 선택</button>
+    <div title="col1">가</div>
+    <div title="col2">나</div>
+    <div title="col3">다</div>
+    <div title="col4">
+      <button>연장</button>
+    </div>
+  </li>
+</ul>
 
 <script>
 </script>
