--- a/test2.html
+++ b/test2.html
@@ -6,6 +6,16 @@
   <title>이벤트 트리거 예제</title>
 </head>
 <body>
+<style>
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  li {
+    list-style: none;
+    padding: 0;
+  }
+</style>
 <ul>
   <li>
     <button title="선택됨">리스트 선택</button>
